Updated Software page

--- a/software/index.html
+++ b/software/index.html
@@ -183,6 +183,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#evo2sim"><i class="fas fa-caret-down"></i> Evo<sup>2</sup>Sim</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#puutools"><i class="fas fa-caret-down"></i> puutools</a>
+      </li>
     </ul>
     <br/>
 
@@ -340,6 +343,48 @@
                 <br/>
                 • <strong>Jul. 2015:</strong> <em>Proceedings of the EvoEvo Workshop, Satellite workshop of ECAL 2015</em> (York, UK). <a href="https://hal.inria.fr/hal-01252796/" target="_blank">(link)</a>
                 </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- puutools -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-11">
+        <div class="shadow-sm card border-muted">
+          <div class="row no-gutters">
+            <div class="col-md-4 p-4 text-center">
+              <a name="moris"></a>
+              <img src="../img/puutools_logo.png" alt="MoRIS logo" width=200px class="img-fluid">
+              <br/><br />
+              <span class="text-muted">Easy-to-use C++ library for the live tracking of lineage and coalescence trees in individual-based forward-in-time simulations.</span>
+              <br /><br />
+              <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
+              <a href="https://github.com/charlesrocabert/puutools" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> puutools repository</a>
+              </div>
+            </div>
+
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title"><i class="fas fa-caret-down"></i> puutools (live tracking of lineage and coalescence trees)</h5>
+                <p align="center">
+                  <a href="https://github.com/charlesrocabert/puutools/releases/latest"><img src="https://img.shields.io/github/release/charlesrocabert/puutools/all.svg" /></a>&nbsp;
+                  <a href="https://github.com/charlesrocabert/puutools/actions"><img src="https://github.com/charlesrocabert/puutools/workflows/CMake/badge.svg" /></a>&nbsp;
+                  <a href="https://github.com/charlesrocabert/puutools/LICENSE.html"><img src="https://img.shields.io/badge/License-GPLv3-blue.svg" /></a>
+                </p>
+
+                <p class="card-text text-justify font-weight-light"><span class="dropcap">P</span>uutools is a C++ library which allows to dynamically create, track and manage lineage and/or coalescence trees during individual-based forward-in-time simulations of evolution.</p>
+
+                <p class="card-text text-justify font-weight-light">With puutools, it is possible to update the lineage and/or the coalescence tree of a population at each generation during a simulation, and to track and recover evolutionary events at any time. puutools is easy to deploy and versatile, providing the user with a small set of integrated functions.</p>
+
+                <p class="card-text text-justify font-weight-light">puutools is an all-in-one library. It does not depend on third-party packages, and its code is kept simple and light. By the way, puutools comes as and header-only library, so specific compilation is not needed.</p>
+
+                <p class="card-text text-justify font-weight-light">The code of puutools has primarily been implemented and optimized during the European project <a href="http://www.evoevo.eu/">EvoEvo</a> (FP7-ICT-610427), as part of the <a href="https://github.com/charlesrocabert/Evo2Sim">Evo<sup>2</sup>Sim</a> software (see <a href="https://doi.org/10.1371/journal.pcbi.1005459">Rocabert et al. 2017</a>). The code has also been used in σFGM framework (see <a href="https://doi.org/10.1111/evo.14083">Rocabert et al. 2020</a>). To date, puutools is distributed as a static library for C++ developers. We plan to provide a Python-binding in a future version.</p>
+
+                <p class="card-text text-justify font-weight-light">You will find a <a href="https://github.com/charlesrocabert/puutools/tree/main/example" target="_blank">complete walk-through example</a> to get used to the main functionalities of puutools.</p>
+
               </div>
             </div>
           </div>
