Updated e-mail address

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <a href="https://twitter.com/CharlesRocabert" target="_blank" class="text-dark"><i class="fab fa-twitter fa-2x"></i></a>&nbsp;&nbsp;
       </li>
       <li class="nav-item" style="margin-right:10px;">
-        <a href="mailto:charles[dot]rocabert[at]helsinki[dot]fi" target="_blank" class="text-dark"><i class="fas fa-envelope fa-2x"></i></a>
+        <a href="mailto:charles[dot]rocabert[at]hhu[dot]de" target="_blank" class="text-dark"><i class="fas fa-envelope fa-2x"></i></a>
       </li>
     </ul>
   </div>
