Updated website content

--- a/cv/index.html
+++ b/cv/index.html
@@ -181,6 +181,8 @@
               <span class="text-muted"><font style="font-variant: small-caps">Jan. 2023 - Present</font></span>
               <br/><br/>
               <strong>Lab:</strong> <a href="https://www.math-nat-fak.hhu.de/en/" target="_blank">Faculty of Mathematics and Natural Sciences</a>, Prof. Martin Lercher's <a href="https://www.cs.hhu.de/en/research-groups/computational-cell-biology" target="_blank">Computational Cell Biology group</a>.
+              <strong>Training:</strong><br/>
+              &nbsp;• <a href="https://principlescellphysiology.org/summer-school-2023/index.html" target="_blank">EPCP Summer school 2023 (Paris, France - 2023)</a>: Economic principles in cell biology.
             </div>
           </div>
         </div>
@@ -199,8 +201,8 @@
               <br/><br/>
               <strong>Lab:</strong> <a href="https://www2.helsinki.fi/en/faculty-of-biological-and-environmental-sciences/research/organismal-and-evolutionary-biology" target="_blank">Organismal and Evolutionary Biology Research Program (OEB), Prof. Frédéric Guillaume's group</a>.<br/>
               <strong>Training:</strong><br/>
-              &nbsp;• <a href="https://www.eseb2022.cz/en/droseu-eseb-stn-summer-school" target="_blank">DrosEU/ESEB STN Summer school 2022</a>: Integrating -omics approaches for eco-evolutionary research.<br/>
-              &nbsp;• <a href="https://events.prace-ri.eu/event/1188/" target="_blank">PRACE Autumn School 2021</a>: Introduction to deep-learning and GPU computing.
+              &nbsp;• <a href="https://www.eseb2022.cz/en/droseu-eseb-stn-summer-school" target="_blank">DrosEU/ESEB STN Summer school (Prague, Czech Republic - 2022)</a>: Integrating -omics approaches for eco-evolutionary research.<br/>
+              &nbsp;• <a href="https://events.prace-ri.eu/event/1188/" target="_blank">PRACE Autumn School (Kajaani, Finland - 2021)</a>: Introduction to deep-learning and GPU computing.
             </div>
           </div>
         </div>
@@ -310,11 +312,11 @@
         <div class="shadow-sm card">
           <div class="row no-gutters">
             <div class="col-md-11 p-4">
-              <strong>Teaching assistant, undergraduate department</strong>, Heinrich Heine Düsseldorf Universität (Düsseldorf, Germany)
+              <strong>Lecturer, undergraduate department</strong>, Heinrich Heine Düsseldorf Universität (Düsseldorf, Germany)
               <br/>
               <span class="text-muted"><font style="font-variant: small-caps">2023</font></span>
               <br/><br/>
-              • Introduction to the modelling of metabolic networks.
+              • In charge of the unit "Introduction to the modelling of metabolic networks" (Linear algebra, constraint-based modeling, Python programming).
             </div>
           </div>
         </div>
