--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
   <div class="col-md-8 text-justify">
     <h4 class="text-secondary font-weight-light">ABOUT ME</h4>
     <p class="font-weight-light">
-      <span class="dropcap">I</span> am an evolutionary biologist, who uses computers and mathematics to explore the evolution of complex biological systems. I am studying how adaptation and second-order selection shape genotypes, phenotypes and populations in variable environments, with their share of surprising and counter-intuitive effects.
+      <span class="dropcap">I</span> am an evolutionary systems biologist, who uses computers and mathematics to explore the evolution of complex biological systems. I am studying how adaptation shapes genotypes, phenotypes and populations in variable environments, with its share of surprising and counter-intuitive effects.
     </p>
     <p class="font-weight-light">
-      I am using a broad range of approaches, from mathematical modeling to individual-based simulations, bioinformatics and machine learning.
+      I am using a broad range of approaches, from mathematical modeling to numerical simulations, bioinformatics and machine learning.
 
       Depending on their complexity, I usually consider simulation models as experimental systems (<a href="https://doi.org/10.1016/j.tree.2004.07.019" target="_blank">Peck, 2004</a>) &mdash; I conduct <em>in silico</em> evolution experiments in a computer as one would do in the real world (<a href="https://doi.org/10.1038/nrmicro2750" target="_blank">Hindré et al., 2012</a>).
     </p>
