--- a/publications/index.html
+++ b/publications/index.html
@@ -176,14 +176,6 @@
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Preprints</font></h5>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
-      <span class="badge badge-pill badge-warning">submitted</span> <u>Orsolya Liska</u>, <u>Gábor Boross</u>, <u>Charles Rocabert</u>, Balázs Szappanos, Roland Tengölics, Balázs Papp.
-      <strong>Principles of metabolome conservation in animals</strong>.
-      <br/>
-      <a href="https://www.biorxiv.org/content/10.1101/2022.08.15.503737v1" target="_blank">(BioRXiv pre-print, August 2022)</a>
-      <br/>
-    </p>
-
-    <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-warning">submitted</span> <u>Charles Rocabert</u>, Serge Fenet, Bernard Kaufmann, Jérôme M.W. Gippet.
       <strong>Accounting for the topology of road networks to better model human-mediated dispersal in terrestrial landscapes</strong>.
       <br/>
@@ -196,6 +188,14 @@
 
     <br/><hr>
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">International peer-reviewed journal articles</font></h5>
+
+    <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
+      <span class="badge badge-pill badge-success">accepted</span> <u>Orsolya Liska</u>, <u>Gábor Boross</u>, <u>Charles Rocabert</u>, Balázs Szappanos, Roland Tengölics, Balázs Papp.
+      <strong>Principles of metabolome conservation in animals</strong>.
+      <br/>
+      <a href="https://www.biorxiv.org/content/10.1101/2022.08.15.503737v1" target="_blank">(BioRXiv pre-print, August 2022)</a>
+      <br/>
+    </p>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-success">2022</span> <u>Jérôme M. W. Gippet</u>, Charles Rocabert, Théotime Colin, Julien Grangier, Hugo Tauru, Adeline Dumet, Nathalie Mondy, Bernard Kaufmann.
@@ -278,11 +278,6 @@
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-success">2022</span> <u>Charles Rocabert</u>, Guillaume Beslon, Carole Knibbe, Samuel Bernard. <strong>Phenotypic Noise and the Cost of
-  Complexity</strong>. <em>University of Lausanne, DEE seminars</em> (May. 2021, Lausanne, Switzerland)
-    </p>
-
-    <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
-      <span class="badge badge-pill badge-success">2021</span> <u>Charles Rocabert</u>, Guillaume Beslon, Carole Knibbe, Samuel Bernard. <strong>Phenotypic Noise and the Cost of
   Complexity</strong>. <em>University of Lausanne, DEE seminars</em> (May. 2021, Lausanne, Switzerland)
     </p>
 
