--- a/research/index.html
+++ b/research/index.html
@@ -169,6 +169,32 @@
     <h4 class="text-secondary font-weight-light"><img src="../img/erlenmeyer.png" alt="Erlenmeyer" width=40px> RESEARCH PROJECTS</h4>
 
     <!-- Research topic 6 -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-11">
+        <div class="shadow-sm card border-muted">
+          <div class="row no-gutters">
+            <div class="col-md-4 p-4 text-center">
+              <img src="../img/project6.png" alt="Project 1" width=200px class="img-fluid">
+              <br /><br />
+              <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
+
+              </div>
+              <br/><br/>
+              <h5><span class="badge badge-pill badge-success">ongoing project</span><br/></h5>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title"><i class="fas fa-caret-down"></i> Metabolic fitness landscapes for evolutionary predictions</h5>
+                <p class="card-text text-justify font-weight-light"><span class="dropcap">I</span>t is currently unclear if the molecular phenotypes observed in evolution experiments indicate <strong>(i)</strong> non-repeatability of evolutionary trajectories, <strong>(ii)</strong> the existence of local fitness optima, or <strong>(iii)</strong> distinct paths toward fitness maximization that are predictable in a probabilistic sense. Moreover, it is unclear why some molecular properties, such as metabolite abundances, or protein expression levels, are more or less conserved through evolution.</p>
+                <p class="card-text text-justify font-weight-light">To predict fitness from cellular resource allocation, I am developing a mathematical and computational evolutionary framework based on the GBA formalism (<a href"">Dourado & Lercher, 2020</a>). This framework will allow to predict evolutionary trajectories and their repeatability, and more generally to better understand the evolution of cellular metabolism, as well as decipher the first principles behind the evolution and the conservation of metabolism properties.</p>
+                <p
+                <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Martin J. Lercher, Hugo Dourado.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Research topic 5 -->
     <div class="row justify-content-center mt-4">
@@ -218,7 +244,7 @@
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Modeling the principles behind metabolome conservation in mammals</h5>
                 <p class="card-text text-justify font-weight-light"><span class="dropcap">T</span>raditionally, metabolic evolution has been primarily studied by comparing enzyme content and pathway structure across species. Recent progress in metabolomics technology allows the systematic quantification of metabolite concentrations, the metabolome, offering a new perspective to interrogate the evolution of metabolic systems.</p>
-                <p class="card-text text-justify font-weight-light">Within this interdisciplinary project, I explored the evolving properties of kinetic models of mammalian metabolism using computer simulations. I developed <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank">MetEvolSim</a> (Metabolome Evolution Simulator), a simulation framework publicly available as a user friendly <a href="https://pypi.org/project/MetEvolSim/" target="_blank">Python package</a>. MetEvolSim takes as an input any SBML metabolic network model, as soon as the kinetic model is fully specified, and a stable steady-state exists. Steady-state concentrations are computed thanks to Copasi software. Using this model, I have shown that abundant metabolites are more coupled to fitness, and are therefore more conserved through evolution <strong>(<a href="https://www.biorxiv.org/content/10.1101/2022.08.15.503737v1" target="_blank">one pre-print in BioRXiv</a>)</strong>.</p>
+                <p class="card-text text-justify font-weight-light">Within this interdisciplinary project, I explored the evolving properties of kinetic models of mammalian metabolism using computer simulations. I developed <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank">MetEvolSim</a> (Metabolome Evolution Simulator), a simulation framework publicly available as a user friendly <a href="https://pypi.org/project/MetEvolSim/" target="_blank">Python package</a>. MetEvolSim takes as an input any SBML metabolic network model, as soon as the kinetic model is fully specified, and a stable steady-state exists. Steady-state concentrations are computed thanks to Copasi software. Using this model, I have shown that abundant metabolites are more coupled to fitness, and are therefore more conserved through evolution <strong>(<a href="https://www.biorxiv.org/content/10.1101/2022.08.15.503737v1" target="_blank">one accepted manuscript</a>)</strong>.</p>
                 <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Gábor Boross, Orsolya Liska, Balázs Papp.</p>
               </div>
             </div>
