--- a/software/index.html
+++ b/software/index.html
@@ -356,7 +356,7 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <a name="moris"></a>
+              <a name="puutools"></a>
               <img src="../img/puutools_logo.png" alt="MoRIS logo" width=200px class="img-fluid">
               <br/><br />
               <span class="text-muted">Easy-to-use C++ library for the live tracking of lineage and coalescence trees in individual-based forward-in-time simulations.</span>
