Update after publication

--- a/publications/index.html
+++ b/publications/index.html
@@ -182,7 +182,7 @@
     </p>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
-      <span class="badge badge-pill badge-warning">in prep.</span> <u>Eva L. Koch</u>, <u>Charles Rocabert</u>, Frédéric Guillaume.
+      <span class="badge badge-pill badge-warning">in prep.</span> <u>Eva L. Koch</u>, Charles Rocabert, Frédéric Guillaume.
       <br/>
     </p>
 
@@ -190,16 +190,16 @@
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">International peer-reviewed journal articles</font></h5>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
-      <span class="badge badge-pill badge-success">accepted</span> <u>Orsolya Liska</u>, <u>Gábor Boross</u>, <u>Charles Rocabert</u>, Balázs Szappanos, Roland Tengölics, Balázs Papp.
-      <strong>Principles of metabolome conservation in animals</strong>.
+      <span class="badge badge-pill badge-success">2023</span> <u>Orsolya Liska</u>, <u>Gábor Boross</u>, <u>Charles Rocabert</u>, Balázs Szappanos, Roland Tengölics, Balázs Papp.
+      <strong>Principles of metabolome conservation in animals</strong>. <em>Proceedings of the National Academy of Sciences 120 (35), e2302147120</em> (2023).
       <br/>
-      <a href="https://www.biorxiv.org/content/10.1101/2022.08.15.503737v1" target="_blank">(BioRXiv pre-print, August 2022)</a>
+      <a href="https://doi.org/10.1073/pnas.2302147120" target="_blank">(DOI:10.1073/pnas.2302147120)</a>
       <br/>
     </p>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-success">2022</span> <u>Jérôme M. W. Gippet</u>, Charles Rocabert, Théotime Colin, Julien Grangier, Hugo Tauru, Adeline Dumet, Nathalie Mondy, Bernard Kaufmann.
-      <strong>The observed link between urbanization and invasion can depend on how invasion is measured</strong>. <em>Diversity and Distributions</em> (2022).
+      <strong>The observed link between urbanization and invasion can depend on how invasion is measured</strong>. <em>Diversity and Distributions 28 (6), 1171-1179</em> (2022).
       <br/>
       <a href="https://doi.org/10.1111/ddi.13509" target="_blank">(DOI:10.1111/ddi.13509)</a> <a href="https://onlinelibrary.wiley.com/action/showCitFormats?doi=10.1111%2Fddi.13509" target="_blank">(bibtex)</a>
       <br/>
@@ -207,14 +207,14 @@
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-success">2020</span> <u>Charles Rocabert</u>, Guillaume Beslon, Carole Knibbe, Samuel Bernard.
-      <strong>Phenotypic noise and the cost of complexity</strong>. <em>Evolution</em> (2020).
+      <strong>Phenotypic noise and the cost of complexity</strong>. <em>Evolution 74 (10), 2221-2237</em> (2020).
       <br/>
       <a href="https://doi.org/10.1111/evo.14083" target="_blank">(DOI:10.1111/evo.14083)</a> <a href="https://hal.archives-ouvertes.fr/hal-02920356v1/bibtex" target="_blank">(bibtex)</a>
     </p>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-success">2017</span> <u>Charles Rocabert</u>, Carole Knibbe, Jessika Consuegra, Dominique Schneider, Guillaume Beslon.
-      <strong>Beware batch culture: Seasonality and niche construction predicted to favor bacterial adaptive diversification</strong>. <em>PLoS Computational Biology</em> (2017).
+      <strong>Beware batch culture: Seasonality and niche construction predicted to favor bacterial adaptive diversification</strong>. <em>PLoS computational biology 13 (3), e1005459</em> (2017).
       <br/>
       <a href="https://doi.org/10.1371/journal.pcbi.1005459.s006" target="_blank">(DOI:10.1371/journal.pcbi.1005459.s006)</a> <a href="https://hal.archives-ouvertes.fr/hal-01508751/bibtex" target="_blank">(bibtex)</a>
     </p>
