--- a/research/index.html
+++ b/research/index.html
@@ -188,7 +188,7 @@
                 <p class="card-text text-justify font-weight-light"><span class="dropcap">I</span>t is currently unclear if the molecular phenotypes observed in evolution experiments indicate <strong>(i)</strong> non-repeatability of evolutionary trajectories, <strong>(ii)</strong> the existence of local fitness optima, or <strong>(iii)</strong> distinct paths toward fitness maximization that are predictable in a probabilistic sense. Moreover, it is unclear why some molecular properties, such as metabolite abundances, or protein expression levels, are more or less conserved through evolution.</p>
                 <p class="card-text text-justify font-weight-light">To predict fitness from cellular resource allocation, I am developing a mathematical and computational evolutionary framework based on the GBA formalism (<a href"">Dourado & Lercher, 2020</a>). This framework will allow to predict evolutionary trajectories and their repeatability, and more generally to better understand the evolution of cellular metabolism, as well as decipher the first principles behind the evolution and the conservation of metabolism properties.</p>
                 <p
-                <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Martin J. Lercher, Hugo Dourado.</p>
+                <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Hugo Dourado, Martin J. Lercher.</p>
               </div>
             </div>
           </div>
@@ -233,7 +233,7 @@
               <img src="../img/project2.png" alt="Project 2" width=200px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
-              <a href="https://www.biorxiv.org/content/10.1101/2022.08.15.503737v1" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Pre-print (BioRXiv, 2022)</a>
+              <a href="https://doi.org/10.1073/pnas.2302147120" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Publication (PNAS, 2023)</a>
               <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> MetEvolSim repository</a>
               <a href="https://pypi.org/project/MetEvolSim/" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-python"></i> Pypi package</a>
               </div>
