--- a/publications/index.html
+++ b/publications/index.html
@@ -176,7 +176,7 @@
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Preprints</font></h5>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
-      <span class="badge badge-pill badge-warning">submitted</span> <u>Charles Rocabert</u>, Serge Fenet, Bernard Kaufmann, Jérôme M.W. Gippet.
+      <span class="badge badge-pill badge-success">accepted</span> <u>Charles Rocabert</u>, Serge Fenet, Bernard Kaufmann, Jérôme M.W. Gippet.
       <br/>
     </p>
 
