--- a/software/index.html
+++ b/software/index.html
@@ -242,7 +242,8 @@
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
               <a href="https://github.com/charlesrocabert/MoRIS" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> MoRIS repository</a>
-              </div>
+              <a href="https://github.com/charlesrocabert/MoRIS/blob/master/INPUT_FILES_TUTORIAL.md" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-link"></i> Input file tutorial</a>
+            </div>
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -256,7 +257,7 @@
                 <p class="card-text text-justify font-weight-light">To learn how to use MoRIS, first install the <a href="https://github.com/charlesrocabert/MoRIS/releases/latest" target="_blank">latest release</a>, and follow the <a href="https://github.com/charlesrocabert/MoRIS/" target="_blank">installation instructions and the first usage guide</a>. MoRIS software requires input files built in a certain way. To learn how to build this files, read the <a href="https://github.com/charlesrocabert/MoRIS/blob/master/INPUT_FILES_TUTORIAL.md" target="_blank">input files tutorial</a>.</p>
                 <h5>Publications and communications</h5>
                 <p class="card-text text-justify font-weight-light">
-                • One manuscript submitted.
+                • One manuscript accepted.
                 <br/>
                 • <strong>Aug. 2016:</strong> <em>Proceedings of IENE 2016 conference. 5th International Conference on Ecology and Transportation: Integrating Transport Infrastructures with Living Landscapes</em> (Lyon, France). <a href="http://hal.cirad.fr/LJK_MAD_STEEP/hal-01412280v1" target="_blank">(link)</a>
                 <br/>
