Updated publications list

--- a/publications/index.html
+++ b/publications/index.html
@@ -176,17 +176,20 @@
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Preprints</font></h5>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
-      <span class="badge badge-pill badge-success">accepted</span> <u>Charles Rocabert</u>, Serge Fenet, Bernard Kaufmann, Jérôme M.W. Gippet.
-      <br/>
-    </p>
-
-    <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-warning">in prep.</span> <u>Eva L. Koch</u>, Charles Rocabert, Frédéric Guillaume.
       <br/>
     </p>
 
     <br/><hr>
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">International peer-reviewed journal articles</font></h5>
+
+    <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
+      <span class="badge badge-pill badge-success">2023</span> <u>Charles Rocabert</u>, Serge Fenet, Bernard Kaufmann, Jérôme M.W. Gippet.
+      <strong>Accounting for the topology of road networks to better explain human-mediated dispersal in terrestrial landscapes</strong>. <em>Ecography, in press</em> (2023).
+      <br/>
+      <a href="https://doi.org/10.1111/ecog.07068" target="_blank">(DOI:10.1111/ecog.07068)</a>
+      <br/>
+    </p>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-success">2023</span> <u>Orsolya Liska</u>, <u>Gábor Boross</u>, <u>Charles Rocabert</u>, Balázs Szappanos, Roland Tengölics, Balázs Papp.
