--- a/research/index.html
+++ b/research/index.html
@@ -174,7 +174,7 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <img src="../img/project6.png" alt="Project 1" width=200px class="img-fluid">
+              <img src="../img/project6.png" alt="Project 6" width=200px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
 
@@ -202,7 +202,7 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <img src="../img/project1.png" alt="Project 1" width=120px class="img-fluid">
+              <img src="../img/project1.png" alt="Project 5" width=120px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
 
@@ -230,7 +230,7 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <img src="../img/project2.png" alt="Project 2" width=200px class="img-fluid">
+              <img src="../img/project2.png" alt="Project 4" width=200px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
               <a href="https://doi.org/10.1073/pnas.2302147120" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Publication (PNAS, 2023)</a>
@@ -294,9 +294,10 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <img src="../img/project4.png" alt="Project 4" width=200px class="img-fluid">
+              <img src="../img/project4.png" alt="Project 2" width=200px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
+              <a href="https://doi.org/10.1111/ecog.07068" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Publication (Ecography, 2023)</a>
               <a href="https://github.com/charlesrocabert/MoRIS" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> MoRIS repository</a>
               </div>
               <br/><br/>
@@ -323,7 +324,7 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <img src="../img/project5.png" alt="Project 5" width=250px class="img-fluid">
+              <img src="../img/project5.png" alt="Project 1" width=250px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
               <a href="https://doi.org/10.1371/journal.pcbi.1005459
