--- a/index.html
+++ b/index.html
@@ -166,9 +166,37 @@
 
 <div class="row m-3 mb-5">
 
+  <div class="col-md-4 text-center d-none d-lg-block">
+    <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
+      <img src="./img/project1.png" alt="Multi omics" height=80px>
+      <br /><br />
+      <h3>Multi<br />Omics</h3>
+    </button>
+  </div>
+
+  <div class="col-md-4 text-center d-none d-lg-block">
+    <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
+      <img src="./img/screens.png" alt="Numerical simulations" height=80px>
+      <br /><br />
+      <h3>Numerical<br />Simulations</h3>
+    </button>
+  </div>
+
+  <div class="col-md-4 text-center d-none d-lg-block">
+    <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
+      <img src="./img/board.png" alt="Mathematical biology" height=80px>
+      <br /><br />
+      <h3>Mathematical<br />Biology</h3>
+    </button>
+  </div>
+
+</div>
+
+<div class="row m-3 mb-5">
+
   <div class="col-md-4 text-center">
     <br/>
-    <img class="rounded" src="img/portrait.png" alt="Portrait" width=250px>
+    <img class="rounded img-fluid" src="./img/portrait.jpg" alt="Portrait" width=250px>
     <br/><br/>
     <a type="button" class="btn btn-outline-info btn-block" href="/cv/">Resume/CV</a>
     <br/>
@@ -196,34 +224,15 @@
 
 <div class="row m-3 mb-5">
   <div class="col-lg text-center">
-    <script>
-    switch (Math.floor(Math.random() * 4)) {
-      case 0:
-        document.write('<img src="img/achem.png" alt="AChem" height=150px>');
-        break;
-      case 1:
-        document.write('<img src="img/board.png" alt="Blackboard" height=150px>');
-        break;
-      case 2:
-        document.write('<img src="img/hexagons.png" alt="Hexagons" height=150px>');
-        break;
-      case 3:
-        document.write('<img src="img/screens.png" alt="Screens" height=150px>');
-        break;
-    }
-    </script>
+    <img src="./img/achem.png" alt="AChem" height=150px>
   </div>
 </div>
 
 
 
-
-
-
-
 <div class="row">
   <div class="col text-center border-top">
-    <small class="text-muted"> &copy; 2020-2023 Charles Rocabert. All rights reserved. Powered by Hugo and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
+    <small class="text-muted"> &copy; 2020-2024 Charles Rocabert. All rights reserved. Powered by Hugo and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
   </div>
 </div>
 
