--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
       <img src="./img/project1.png" alt="Multi omics" height=80px>
       <br /><br />
-      <h3>Multi<br />Omics</h3>
+      <h3>Integrative<br />Omics</h3>
     </button>
   </div>
 
