--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
   <div class="col-md-4 text-center d-none d-lg-block">
     <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
-      <img src="./img/project1.png" alt="Multi omics" height=80px>
+      <img src="./img/project1.png" alt="Multi omics" height=120px>
       <br /><br />
       <h3>Integrative<br />Omics</h3>
     </button>
@@ -176,15 +176,15 @@
 
   <div class="col-md-4 text-center d-none d-lg-block">
     <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
-      <img src="./img/screens.png" alt="Numerical simulations" height=80px>
+      <img src="./img/hexagons.png" alt="Numerical simulations" height=120px>
       <br /><br />
-      <h3>Numerical<br />Simulations</h3>
+      <h3>Complex Systems<br />Simulations</h3>
     </button>
   </div>
 
   <div class="col-md-4 text-center d-none d-lg-block">
     <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
-      <img src="./img/board.png" alt="Mathematical biology" height=80px>
+      <img src="./img/board.png" alt="Mathematical biology" height=120px>
       <br /><br />
       <h3>Mathematical<br />Biology</h3>
     </button>
