--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
       <img src="./img/hexagons.png" alt="Numerical simulations" height=120px>
       <br /><br />
-      <h3>Complex Systems<br />Simulations</h3>
+      <h3>Complex Systems<br />Modeling</h3>
     </button>
   </div>
 
