--- a/publications/index.html
+++ b/publications/index.html
@@ -176,6 +176,16 @@
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Preprints</font></h5>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
+      <span class="badge badge-pill badge-warning">in prep.</span> <u>Aymeric Bonnamour</u>, <u>Charles Rocabert</u>, Serge Fenet, Jeffrey R. Garnas, Bernard Kaufmann, Jérôme M.W Gippet.
+      <br/>
+    </p>
+
+    <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
+      <span class="badge badge-pill badge-warning">in prep.</span> <u>Charles Rocabert</u>, Martin Lercher.
+      <br/>
+    </p>
+
+    <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-warning">in prep.</span> <u>Eva L. Koch</u>, Charles Rocabert, Frédéric Guillaume.
       <br/>
     </p>
